force-app/main/default/objects/Operational_Alert__c/Operational_Alert__c.object-meta.xml
<CustomObject>
    <label>Operational Alert</label>
    <pluralLabel>Operational Alerts</pluralLabel>
    <nameField>
        <label>Name</label>
        <type>AutoNumber</type>
        <displayFormat>ALT-{000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Tracks operational alerts for drift, performance, security, and other monitoring events</description>
</CustomObject>