force-app/main/default/objects/Operational_Alert__c/fields/Alert_Type__c.field-meta.xml
<CustomField>
    <fullName>Alert_Type__c</fullName>
    <label>Alert Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Drift</fullName><default>false</default><label>Drift</label></value>
            <value><fullName>Performance</fullName><default>false</default><label>Performance</label></value>
            <value><fullName>License</fullName><default>false</default><label>License</label></value>
            <value><fullName>Security</fullName><default>false</default><label>Security</label></value>
            <value><fullName>Limit</fullName><default>false</default><label>Limit</label></value>
            <value><fullName>Configuration</fullName><default>false</default><label>Configuration</label></value>
            <value><fullName>Integration</fullName><default>false</default><label>Integration</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>