force-app/main/default/objects/Operational_Alert__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <label>Environment</label>
    <type>Lookup</type>
    <referenceTo>Environment__c</referenceTo>
    <relationshipName>Operational_Alerts</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>