force-app/main/default/objects/Operational_Alert__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>New</fullName><default>false</default><label>New</label></value>
            <value><fullName>Acknowledged</fullName><default>false</default><label>Acknowledged</label></value>
            <value><fullName>Investigating</fullName><default>false</default><label>Investigating</label></value>
            <value><fullName>Resolved</fullName><default>false</default><label>Resolved</label></value>
            <value><fullName>Dismissed</fullName><default>false</default><label>Dismissed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>